login issue fixed

--- a/assets/detail.html
+++ b/assets/detail.html
@@ -24,7 +24,7 @@
     />
     <link href="/mystyle.css" rel="stylesheet" />
 
-    <title>쇼핑몰 | 상품 상세</title>
+    <title>스파르타 쇼핑몰 | 상품 상세</title>
   </head>
 
   <body>
@@ -39,7 +39,7 @@
           class="d-inline-block align-top"
           alt=""
         />
-        쇼핑몰
+        스파르타 쇼핑몰
       </a>
       <button
         class="navbar-toggler ml-auto"
