--- a/assets/index.html
+++ b/assets/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
     />
     <link href="/mystyle.css" rel="stylesheet" />
-    <title>쇼핑몰 | 로그인</title>
+    <title>스파르타 쇼핑몰 | 로그인</title>
 
     <style>
       .jumbotron {
@@ -45,7 +45,7 @@
       class="jumbotron bg-sparta text-white text-center"
       onclick="window.location.href='/'"
     >
-      <h1 class="font-weight-bold">쇼핑몰</h1>
+      <h1 class="font-weight-bold">스파르타 쇼핑몰</h1>
     </div>
     <div class="wrap">
       <div class="card mx-auto" style="max-width: 480px">
