--- a/assets/order.html
+++ b/assets/order.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
     <link href="/mystyle.css" rel="stylesheet" />
-    <title>쇼핑몰 | 주문</title>
+    <title>스파르타 쇼핑몰 | 주문</title>
 
     <style>
       .card {
@@ -44,7 +44,7 @@
           class="d-inline-block align-top"
           alt=""
         />
-        쇼핑몰
+        스파르타 쇼핑몰
       </a>
       <button
         class="navbar-toggler ml-auto"
