--- a/assets/register.html
+++ b/assets/register.html
@@ -23,7 +23,7 @@
     />
 
     <link href="/mystyle.css" rel="stylesheet" />
-    <title>쇼핑몰 | 회원가입</title>
+    <title>스파르타 쇼핑몰 | 회원가입</title>
 
     <style>
       .jumbotron {
@@ -43,7 +43,7 @@
       class="jumbotron bg-sparta text-white text-center"
       onclick="window.location.href='/'"
     >
-      <h1 class="font-weight-bold">쇼핑몰</h1>
+      <h1 class="font-weight-bold">스파르타 쇼핑몰</h1>
     </div>
     <div class="wrap">
       <div class="card mx-auto" style="max-width: 480px">
