--- a/assets/cart.html
+++ b/assets/cart.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
     <link href="/mystyle.css" rel="stylesheet" />
-    <title>쇼핑몰 | 장바구니</title>
+    <title>스파르타 쇼핑몰 | 장바구니</title>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -169,7 +169,7 @@
           class="d-inline-block align-top"
           alt=""
         />
-        쇼핑몰
+        스파르타 쇼핑몰
       </a>
       <button
         class="navbar-toggler ml-auto"
