--- a/assets/goods.html
+++ b/assets/goods.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
     <link href="/mystyle.css" rel="stylesheet" />
-    <title>  쇼핑몰 | 상품 목록</title>
+    <title>스파르타 쇼핑몰 | 상품 목록</title>
     <style>
       .card {
         cursor: pointer;
@@ -47,7 +47,7 @@
           class="d-inline-block align-top"
           alt=""
         />
-          쇼핑몰
+        스파르타 쇼핑몰
       </a>
       <button
         class="navbar-toggler ml-auto"
